# batyr

./: .gitignore  .travis.yml  CMakeLists.txt  DEVELOPMENT.md  LICENSE.md  MANUAL.md  Makefile.devel  README.md  batyrd.cfg  batyrd.cfg.sample
cmake/: FindGDAL.cmake  FindPoco.cmake  FindPoco.info  GetGitRevisionDescription.cmake  PocoBundleSpec.bndlspec.in  PocoBundles.cmake  PocoBundlesFunctions.cmake
debian/: changelog  control  copyright  postinst  rules
src/: CMakeLists.txt  baselistener.cpp  baselistener.h  broker.cpp  broker.h  config.h  httplistener.cpp  httplistener.h  httprequesthandlerfactory.cpp  httprequesthandlerfactory.h  macros.h  main.cpp  server.cpp  server.h
src/common/: CMakeLists.txt  config.h  config.h.in  iniparser.cpp  macros.h  nullablevalue.h  stringutils.cpp  stringutils.h
src/core/: CMakeLists.txt  config.h.in  configuration.cpp  configuration.h  iniparser.cpp  iniparser.h  macros.h  nullablevalue.h  stringutils.h
src/core/db/: connection.cpp  connection.h  field.h  postgis.cpp  postgis.h  queryvalue.h  transaction.cpp  transaction.h
src/httprequest/: createhandler.cpp  createhandler.h  notfoundhandler.cpp  notfoundhandler.h
src/server/: CMakeLists.txt  baselistener.cpp  baselistener.h  broker.cpp  broker.h  config.h  configuration.cpp  configuration.h  error.cpp  error.h  httpassets.h  httplistener.cpp  httplistener.h  httprequesthandlerfactory.cpp  httprequesthandlerfactory.h  job.cpp  job.h  joblist.cpp  joblist.h  jobstorage.cpp  jobstorage.h  json.cpp  json.h  macros.h  main.cpp  quitablequeue.h  response.cpp  response.h  server.cpp  server.h  worker.cpp  worker.h
src/server/db/: connection.cpp  connection.h  field.h  postgis.cpp  postgis.h  queryvalue.h  transaction.cpp  transaction.h
src/server/http/: bufferhandler.cpp  bufferhandler.h  createhandler.cpp  createhandler.h  getjobhandler.cpp  getjobhandler.h  handler.cpp  handler.h  httprequesthandlerfactory.cpp  httprequesthandlerfactory.h  joblisthandler.cpp  joblisthandler.h  layerlisthandler.cpp  layerlisthandler.h  listener.cpp  listener.h  notfoundhandler.cpp  notfoundhandler.h  pullhandler.cpp  pullhandler.h  removebyattributeshandler.cpp  removebyattributeshandler.h  statushandler.cpp  statushandler.h
src/server/httprequest/: bufferhandler.cpp  bufferhandler.h  createhandler.cpp  createhandler.h  infohandler.cpp  infohandler.h  joblisthandler.cpp  joblisthandler.h  layerlisthandler.cpp  layerlisthandler.h  notfoundhandler.cpp  notfoundhandler.h  statushandler.cpp  statushandler.h
src/web/: CMakeLists.txt  generate-header.sh  generate-manual-html.py
src/web/static/: index.html
src/web/static/css/: font-awesome.css.in  style.css  style.css.in
src/web/static/js/: angular-notify.js.in  app.js  app.js.in  controllers.js  controllers.js.in
src/web/static/js/app.in/: app.js  controllers.js
src/web/static/partials/: about.html  job.html  jobqueue.html  layers.html  manual.html.in  status.html
src/web/tools/: assets2header.py  resources-to-header.py
static_html/: index.html
static_html/css/: baby-blue.css  style.css
static_html/js/: app.js  controllers.js
static_html/partials/: about.html  jobqueue.html  layers.html  status.html
testdata/: schema.sql
testdata/shapes/: dataset1.dbf  dataset1.shp  dataset1.shx
tools/: assets2header.py  docker-build-deb.bash
tools/dev-environments/debian-stretch/: Dockerfile
